Added macro entry

--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/CardView/styles.css
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/CardView/styles.css
@@ -1,7 +1,7 @@
 .dxcvControl_KetoSavage,
 .dxcvDisabled_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     background-color: White;
     color: #000000;
     cursor: default;
@@ -31,7 +31,7 @@
 .dxcvLoadingPanel_KetoSavage
 {
     background-color: white;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: #484848;
     -moz-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 8px 0 rgba(0,0,0,0.12);
     -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 8px 0 rgba(0,0,0,0.12);
@@ -135,7 +135,7 @@ html.dxIE.dxBrowserVersion-9 .dxcvLoadingPanelStatusBar_KetoSavage .dxlp-loading
     background-color: white;
     overflow: hidden;
     font-weight: normal;
-    font: 14px 'Roboto Medium', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;font-weight:bold;
     font-size: 1em;
     text-align: left;
 }
