--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/RichEdit/styles.css
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/RichEdit/styles.css
@@ -1,7 +1,7 @@
 .dxreControl_KetoSavage
 {
     border: solid 0px #DFDFDF;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
 }
 .dxreControl_KetoSavage .dxreTableBorderLine
 {
