--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/Scheduler/styles.css
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/Scheduler/styles.css
@@ -22,7 +22,7 @@
 .dxscControl_KetoSavage
 {
     background-color: #dfdfdf;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: #484848;
     border-collapse: separate;
 }
@@ -50,7 +50,7 @@
 .dxscLoadingPanel_KetoSavage
 {
     background-color: white;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: #484848;
     -moz-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 8px 0 rgba(0,0,0,0.12);
     -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 8px 0 rgba(0,0,0,0.12);
@@ -432,7 +432,7 @@ html.dxIE.dxBrowserVersion-9 .dxscLoadingPanel_KetoSavage .dxlp-loadingImage
 }
 .dxscViewSelector_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
 }
 .dxscViewSelectorButton_KetoSavage
 {
