--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/Spreadsheet/styles.css
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/Spreadsheet/styles.css
@@ -1,7 +1,7 @@
 .dxssControl_KetoSavage
 {
     border-style: none;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
 }
 .dxssControl_KetoSavage .dxss-gl .dxss-v,
 .dxssControl_KetoSavage .dxss-gl .dxss-h
@@ -112,7 +112,7 @@
 .dxssLoadingPanel_KetoSavage
 {
     background-color: white;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: #484848;
     -moz-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 8px 0 rgba(0,0,0,0.12);
     -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 8px 0 rgba(0,0,0,0.12);
