--- a/KetoSavageWeb/KetoSavageWeb/Views/Home/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Home/Index.cshtml
@@ -94,7 +94,7 @@
         console.log('made it here!');
         var url = '@Url.Action("Register", "Account")';
         // do something with the url client side variable, for example redirect
-        window.location.href = url;
+        window.location.replace(url);
     }
     //debugger;
     function openWindow(action) {
