--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_userGridViewPartial.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_userGridViewPartial.cshtml
@@ -26,7 +26,7 @@
         userList.Columns.Add(c =>
         {
             c.FieldName = "Id";
-            c.Visible = false;
+            c.Visible = true;
 
         });
         userList.Columns.Add(c =>
