--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/Editors/styles.css
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/Editors/styles.css
@@ -11,7 +11,7 @@
 /* -- ValidationSummary -- */
 .dxvsValidationSummary_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: Red;
 }
 .dxvsValidationSummary_KetoSavage td.dxvsRC_KetoSavage
@@ -52,7 +52,7 @@
 /* TrackBar */
 .dxeTrackBar_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     user-select: none;
     -moz-user-select: -moz-none;
     -khtml-user-select: none;
@@ -452,7 +452,7 @@
 .dxeHelpText_KetoSavage,
 .dxeTBValueToolTip_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
 }
 div.dxeHelpText_KetoSavage,
 .dxeTBValueToolTip_KetoSavage
@@ -521,7 +521,7 @@ td.dxeHelpText_KetoSavage.dxeVHelpTextSys
 .dxlpLoadingPanelWithContent_KetoSavage
 {
     background-color: white;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: #484848;
     -moz-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 8px 0 rgba(0,0,0,0.12);
     -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16), 0 2px 8px 0 rgba(0,0,0,0.12);
@@ -589,7 +589,7 @@ html.dxIE.dxBrowserVersion-9 .dxeImage_KetoSavage.dxe-loadingImage
 }
 .dxeBase_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: #C0C0C0;
 }
 @keyframes radioFocusAnimation
@@ -700,7 +700,7 @@ span[dir='rtl'].dxeBase_KetoSavage.dxichCellSys.dxeTAR label
 /* -- ErrorFrame -- */
 .dxeErrorCell_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: Red;
     border-color: black;
     padding-right: 12px;
@@ -762,7 +762,7 @@ span[dir='rtl'].dxeBase_KetoSavage.dxichCellSys.dxeTAR label
 .dxeEditArea_KetoSavage,
 body input.dxeEditArea_KetoSavage
 {
-    color: #C0C0C0;
+    color: #dedede;
 }
 input[type="text"].dxeEditArea_KetoSavage,
 input[type="password"].dxeEditArea_KetoSavage
@@ -857,7 +857,7 @@ input.dxeColorEditButton_KetoSavage
     white-space: nowrap;
     color: White;
     text-transform: uppercase;
-    font: 14px 'Roboto Medium', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;font-weight:bold;
     font-size: 1em;
 }
 .dxeCalendarButton_KetoSavage.dxeButtonDisabled_KetoSavage,
@@ -976,7 +976,7 @@ input.dxeColorEditButton_KetoSavage:hover
     -khtml-border-radius: 2px;
     border-radius: 2px;
     width: 170px;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     border-collapse: separate;
     border-spacing: 0;
 }
@@ -996,7 +996,7 @@ input.dxeColorEditButton_KetoSavage:hover
 .dxeTextBox_KetoSavage
 {
     border: 1px solid #4d4d4d;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: #C0C0C0;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
@@ -1020,7 +1020,7 @@ input.dxeColorEditButton_KetoSavage:hover
 .dxeRadioButtonList_KetoSavage,
 .dxeCheckBoxList_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
 }
 .dxeRadioButtonList_KetoSavage td.dxe,
 .dxeCheckBoxList_KetoSavage td.dxe
@@ -1037,7 +1037,7 @@ input.dxeColorEditButton_KetoSavage:hover
 {
     background-color: Black;
     border: 1px solid #DCDCDC;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     -o-border-radius: 2px;
@@ -1060,8 +1060,8 @@ input.dxeColorEditButton_KetoSavage:hover
 /* -- Hyperlink -- */
 .dxeHyperlink_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
-    color: #C0C0C0;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    color: #ff1111;
     text-decoration: none;
 }
 .dxeHyperlink_KetoSavage:hover
@@ -1074,7 +1074,7 @@ input.dxeColorEditButton_KetoSavage:hover
     background-color: black;
     width: 70px;
     height: 109px;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: #C0C0C0;
     border: 1px solid #DCDCDC;
 }
@@ -1497,7 +1497,7 @@ input.dxeColorEditButton_KetoSavage:hover
     background-color: Black;
     color: #C0C0C0;
     font-weight: normal;
-    font: 14px 'Roboto Medium', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;font-weight:bold;
     cursor: default;
     border: 1px solid #D9D9D9;
     -webkit-border-radius: 2px;
@@ -1914,16 +1914,16 @@ div.dxeCalendarDETS.dxeCalendarVerticalDETS .dxeCalendarFooter_KetoSavage td:not
 .dxeDisabled_KetoSavage,
 .dxeDisabled_KetoSavage td.dxe
 {
-    color: #C0C0C0;
+    color: #82322f;
     cursor: default;
 }
 .dxeEditArea_KetoSavage.dxeDisabled_KetoSavage
 {
-    color: #C0C0C0;
+    color: #787878;
 }
 a.dxeDisabled_KetoSavage:hover
 {
-    color: #000000;
+    color: #82322f;
     text-decoration: none;
 }
 .dxeButtonDisabled_KetoSavage
@@ -1971,14 +1971,13 @@ a.dxeDisabled_KetoSavage:hover
 {
 	border-color: #DDDDDD;
 	background: #FF4D4D;
-	color: #A2A2A2;
+	color: #787878;
 	cursor: default;
 	-moz-box-shadow: none;
 }
 .dxbButtonHover_KetoSavage
 {
-    color: white;
-    background-color: #ff0000;
+    color: #dedede;
     box-shadow: 0px 5px 6px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 5px 6px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0px 5px 6px rgba(0,0,0,0.2);
@@ -2022,7 +2021,7 @@ div.dxbButton_KetoSavage .dxRipple
 /* Button Link */
 a.dxbButton_KetoSavage
 {
-    color: #000000;
+    color: #dedede;
     text-decoration: none;
     box-shadow: none;
     -moz-box-shadow: none;
@@ -2039,13 +2038,13 @@ a.dxbButton_KetoSavage:hover
 }
 /*a.dxbButton_KetoSavage:active
 {
-    background-color: #DDDDDD;
+    background-color: #dedede;
 }*/
 /* Disabled */
 .dxbDisabled_KetoSavage,
 a.dxbButton_KetoSavage.dxbDisabled_KetoSavage
 {
-    color: #000000;
+    color: #787878;
     cursor: default;
     text-decoration: none;
 }
@@ -2101,7 +2100,7 @@ a.dxfcValue_KetoSavage
     border: 1px solid black;
     padding: 2px 5px 3px;
     color: Black;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
 }
 .dxfcControl_KetoSavage ul.dxfc-tree,
 .dxfcControl_KetoSavage .dxfc-tree ul
@@ -2232,7 +2231,7 @@ a.dxfcValue_KetoSavage
 {
     background-color: #000000;
     color: #000000;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     height: 32px;
     border: 1px solid #DCDCDC;
     -webkit-border-radius: 1px;
@@ -2278,7 +2277,7 @@ a.dxfcValue_KetoSavage
 .dxpcDropDown_KetoSavage,
 .dxeDropDownWindow_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
 }
 .dxeDropDownWindow_KetoSavage
 {
@@ -2400,7 +2399,7 @@ a.dxfcValue_KetoSavage
 /* -- Captcha -- */
 .dxcaControl_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
 }
 .dxcaControl_KetoSavage .dxca-imageDiv
 {
@@ -2447,7 +2446,7 @@ a.dxfcValue_KetoSavage
 .dxcaLoadingPanel_KetoSavage
 {
     background-color: white;
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: #484848;
 }
 .dxcaLoadingPanel_KetoSavage td.dx
@@ -2860,7 +2859,7 @@ input.dxeTokenBoxInput_KetoSavage[type="text"]
 /* Editor caption */
 .dxeCaptionCell_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     color: #C0C0C0;
     white-space: nowrap;
     line-height: 16px;
@@ -2984,7 +2983,7 @@ noindex:-o-prefocus, body:first-of-type .dxeCaptionCell_KetoSavage.dxeCaptionVAT
 /* Out of range warning*/
 .dxeOutOfRWarn_KetoSavage
 {
-    font: 14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
+    font: 14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;
     padding: 3px 8px 4px 8px;
     display: none;
     position: absolute;
