--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
@@ -10,6 +10,7 @@
     
     @Html.DevExpress().GetStyleSheets(
         new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme="KetoSavage" },
+        new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "KetoSavage"},
         new StyleSheet { ExtensionSuite = ExtensionSuite.CardView, Theme = "KetoSavage" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.PivotGrid, Theme = "KetoSavage" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.VerticalGrid, Theme = "KetoSavage" },
@@ -20,8 +21,9 @@
         new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "KetoSavage" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.Dashboard, Theme = "KetoSavage" }
     )
-    @Html.DevExpress().GetScripts( 
+    @Html.DevExpress().GetScripts(
         new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+        new Script { ExtensionSuite = ExtensionSuite.Editors },
         new Script { ExtensionSuite = ExtensionSuite.CardView },
         new Script { ExtensionSuite = ExtensionSuite.PivotGrid },
         new Script { ExtensionSuite = ExtensionSuite.VerticalGrid },
@@ -41,7 +43,7 @@
         {
             settings.Name = "HeaderPane";
             settings.FixedPosition = PanelFixedPosition.WindowTop;
-            settings.Collapsible = true;
+            settings.Collapsible = false;
             settings.SettingsAdaptivity.CollapseAtWindowInnerWidth = 500;
             settings.ControlStyle.CssClass = "headerPane";
             settings.Styles.Panel.CssClass = "panel";
@@ -57,9 +59,27 @@
             });
         }).GetHtml();
 
-        @Html.Partial("_menuPartial")
+        //Html.DevExpress().Panel(settings =>
+        //{
+        //    settings.Name = "LeftPanel";
+        //    settings.ClientVisible = true;
+        //    settings.FixedPosition = PanelFixedPosition.WindowLeft;
+        //    settings.Collapsible = false;
+        //    settings.ControlStyle.CssClass = "leftPanel";
+        //}).GetHtml();
+
+        //Html.DevExpress().Panel(settings =>
+        //{
+        //    settings.Name = "MenuPanel";
+        //    settings.EnableClientSideAPI = true;
+        //    settings.Styles.Panel.CssClass = "panel";
+        //    settings.SetContent(() =>
+        //    {
+        //        Html.RenderPartial("_menuPartial");
+        //    });
+        //}).GetHtml();
     }
-     
+
     <script type="text/javascript">
         function updateHeaderMenuOrientation() {
             if (!window.HeaderMenu) return;
@@ -73,22 +93,26 @@
         }
     </script>
 
-    @Html.DevExpress().Panel(settings => {
+    @Html.DevExpress().Panel(settings =>
+    {
         settings.Name = "MainPane";
         settings.ControlStyle.CssClass = "mainContentPane";
         settings.SetContent(RenderBody().ToHtmlString());
     }).GetHtml()
 
-    @Html.DevExpress().Panel(settings => {
+    @Html.DevExpress().Panel(settings =>
+    {
         settings.Name = "FooterPane";
         settings.FixedPosition = PanelFixedPosition.WindowBottom;
         settings.SettingsAdaptivity.HideAtWindowInnerWidth = 500;
         settings.ControlStyle.CssClass = "footerPane";
         settings.Styles.Panel.CssClass = "panel";
-        settings.SetContent(() => {
+        settings.SetContent(() =>
+        {
             Html.RenderPartial("FooterPartialView");
         });
-   }).GetHtml()
+    }).GetHtml()
 
 </body>
+
 </html>
